--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = "^0.115.3"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 requests = "^2.32.3"
+openai = "^1.52.2"
 
 
 [build-system]
