--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.115.3"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 requests = "^2.32.3"
 openai = "^1.52.2"
+asyncio = "^3.4.3"
+httpx = "^0.27.2"
 
 
 [build-system]
