remove poety requirements

--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,7 @@ valid_extensions = .py,.md,.ini
 butch_size = 7
 
 [api_requests]
+# model: gpt-4o-mini, gpt-3.5-turbo
 model = gpt-3.5-turbo
 temperature = 0.6
 max_token_summary = 500
