--- a/config.ini
+++ b/config.ini
@@ -12,13 +12,13 @@ butch_size = 7
 
 [api_requests]
 # model: gpt-4o-mini, gpt-3.5-turbo, gpt-4-turbo
-model = gpt-4-turbo
+model = gpt-3.5-turbo
 temperature = 0.7
 max_tokens = 400
 
 # f"{PROMPT_SYS}{description}"
 # prompt_sys = "You are an experienced software reviewer. Evaluate the code according:"
-prompt_sys_json = "You are an AI assistant reviewing developer code. Always provide your responses in the following JSON structure:{"Comment": "A brief comment about the code weaknesses, issues and good solutions.", "Skills": "A concise evaluation of the developer's skills.", "Rating": integer(1..5) } Ensure that the response strictly adheres to this format and "Rating" is from 1 to 5. Evaluate the code according:"
+prompt_sys_json = "You are an AI assistant reviewing developer code. Always provide your responses in the following JSON structure:{"Solutions": "A brief comment about the code weaknesses, issues and good solutions.", "Skills": "A concise evaluation of the developer's skills.", "Rating": integer(1..5) } Ensure that the response strictly adheres to this format and "Rating" is from 1 to 5. Evaluate the code according:"
 
 # f"Project structure:{structure}{PROMPT...}"
 prompt_user_structure = "Identifying weaknesses, issues and good solutions code structure in 3 sentences. Make conclusion in 1 sentences."
